[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpgas-online-poe"
version = "0.1.0"
authors = [
  { name="Roman M.", email="roman@typethink.com" },
  { name="Carl Karsten", email="carl@NextDayVideo.com" },
]
description = "Turn it off and on again"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    'pysnmp',
    'django',
]

[project.optional-dependencies]
cli = [
  # "snmpclitools",
]
[project.urls]
Repository = "https://github.com/fpgas-online/fpgas.online-poe"

[tool.hatch.build.targets.wheel]
packages = ["src/snmp_switch"]
